--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -13,13 +13,14 @@
   border-radius: 25px;
   font-weight: bold;
   height: 2.5rem;
-  width: 4rem;
+  width: 5rem;
   float: center;
   display: grid;
   padding-left: 15px;
   padding-right: 15px;
   transition: 0.5s;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  text-align: center;
 }
 
 .button:hover {
@@ -35,9 +36,8 @@
 
 .badge {
   background-color: #fcb900;
-  padding: 0rem 0.3rem;
+  padding: 0rem 0rem;
   border-radius: 25px;
-  margin-left: 2rem;
   font-weight: bold;
 }
 
@@ -70,7 +70,7 @@
 .user-button {
   cursor: pointer;
   border: none;
-  background-color: #fcb900;;
+  background-color: #fcb900;
   color: black;
   padding: 0 1rem;
   display: flex;
@@ -85,9 +85,11 @@
   padding-left: 15px;
   padding-right: 15px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  text-align: center;
 }
 
 .user-button:hover {
-  transition: .5s;
+  transition: 0.5s;
   transform: scale(1.2);
 }
+
