--- a/src/components/Cart/Checkout.module.css
+++ b/src/components/Cart/Checkout.module.css
@@ -4,10 +4,12 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  overflow: auto;
+  max-height: 30rem
 }
 
 .control {
-  margin: .5rem;
+  margin: 0.5rem;
   display: flex;
   flex-direction: column;
 }
@@ -38,7 +40,6 @@
   border: 1px solid #fcb900;
   padding: 0.5rem 2rem;
   border-radius: 25px;
-  
 }
 
 .action .checkout {
@@ -62,7 +63,7 @@
   background-color: #ffeff1;
 }
 
-.invalid{
+.invalid {
   color: #aa0b20;
 }
 
@@ -74,11 +75,11 @@
 .address input {
   display: flex;
   flex-direction: column;
-  margin: 0 0 .5rem 0;
+  margin: 0 0 0.5rem 0;
 }
 
-.phn_control{
-  margin: .5rem;
+.phn_control {
+  margin: 0.5rem;
   display: flex;
   flex-direction: row;
   font: inherit;
