--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,8 +1,8 @@
-.cart-items {
+.cart_items {
     list-style: none;
     margin: 0;
     padding: 0;
-    max-height: 20rem;
+    max-height: 30rem;
     overflow: auto;
   }
   
