--- a/src/components/Cart/Checkout.module.css
+++ b/src/components/Cart/Checkout.module.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   flex-direction: column;
   overflow: auto;
-  max-height: 30rem
+  max-height: 60rem;
 }
 
 .control {
@@ -31,6 +31,7 @@
   display: flex;
   justify-content: flex-end;
   gap: 1rem;
+  margin-right: 1rem;
 }
 
 .action button {
