--- a/src/components/Parts/PartsItems/PartItems.module.css
+++ b/src/components/Parts/PartsItems/PartItems.module.css
@@ -50,7 +50,7 @@
   text-align: center;
 }
 
-@media (width: 320px) {
+/* @media (width: 320px) {
   .part {
     display: grid;
     margin: 0%;
@@ -117,9 +117,9 @@
   .border {
     border-bottom: 1px solid #ccc;
   }
-}
+} */
 
-@media (width: 425px) {
+@media (max-width: 425px) {
   .part {
     display: grid;
     margin: 0%;
