--- a/src/components/Parts/PartsItems/PartItemsForm.module.css
+++ b/src/components/Parts/PartsItems/PartItemsForm.module.css
@@ -25,7 +25,7 @@
   transition: 0.5s;
 }
 
-@media (width: 320px) {
+/* @media (width: 320px) {
   .form {
     display: flex;
     margin: -50%;    
@@ -57,9 +57,9 @@
     transform: scale(1.1);
     transition: 0.5s;
   }
-}
+} */
 
-@media (width: 425px) {
+@media (max-width: 425px) {
   .form {
     display: flex;
     margin: -40%;    
