--- a/src/pages/Reviews/ReviewsList.module.css
+++ b/src/pages/Reviews/ReviewsList.module.css
@@ -1,5 +1,7 @@
-.comments {
+.reviews {
   list-style: none;
   margin: 2.5rem 0;
   padding: 0;
+  display: flex;
+  flex-direction: column-reverse;
 }
