--- a/src/pages/PartDetails/PartDetails.module.css
+++ b/src/pages/PartDetails/PartDetails.module.css
@@ -23,16 +23,17 @@
   margin: 1rem 0 0 1rem;
 }
 
-.upper_body{
+.upper_body {
   display: flex;
   justify-content: space-around;
-align-items: flex-end;  
+  align-items: flex-end;
 }
 
 .side {
   align-items: flex-end;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
   width: 25rem;
+  max-height: 100%;
 }
 
 .details {
@@ -48,9 +49,9 @@ align-items: flex-end;
   color: #fcb900;
 }
 
-.partdetails-title{
-    display: flex;
-    justify-content: space-between;
+.partdetails-title {
+  display: flex;
+  justify-content: space-between;
 }
 
 .btn {
@@ -62,6 +63,13 @@ align-items: flex-end;
   padding: 0.25rem 0.5rem;
   border-radius: 15px;
   font-weight: bold;
+}
+
+.reviews {
+  max-width: 100%;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+  align-items: center;
+  border-radius: 5px;
 }
 
 @media screen and (max-width: 425px) {
@@ -81,7 +89,7 @@ align-items: flex-end;
     width: 100%;
   }
 
-  .img{
+  .img {
     width: 100%;
     height: inherit;
   }
