--- a/src/components/Cart/SideCartItem.module.css
+++ b/src/components/Cart/SideCartItem.module.css
@@ -5,6 +5,7 @@
   border-bottom: 2px solid #fcb900;
   padding: 0;
   width: 10rem;
+  margin-left: -1.5rem;
 }
 
 .sidecart-item h4 {
@@ -55,24 +56,15 @@
 }
 
 .remove {
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: flex-end;
-  align-items: center;
   color: red;
-  border: 1px solid #ccc;
+  border: none;
   padding: 0;
-  border-radius: 3px;
   font: inherit;
   font-weight: bold;
   font-size: 1rem;
-  width: 1rem;
-  height: 1.25rem;
-  text-align: center;
-  border-radius: 5px;
+  text-align: end;
   background-color: transparent;
   cursor: pointer;
-  margin: 0.1rem 0 0.5rem -2rem;
 }
 
 .actions {
