--- a/src/pages/PartDetails/PartDetails.module.css
+++ b/src/pages/PartDetails/PartDetails.module.css
@@ -36,7 +36,7 @@
   max-height: 100%;
 }
 
-.side p{
+.side p {
   text-align: center;
 }
 
@@ -106,7 +106,15 @@
   }
 
   .img {
-    width: 100%;
+    width: 50%;
     height: inherit;
+  }
+}
+
+@media (max-width: 827px) {
+  .upper_body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
