--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -6,3 +6,10 @@
     padding: 1rem;
     box-shadow: 0 0 80px 0 rgba(0, 0, 0, 0.25);
 }
+
+@media (max-width: 608px){
+    .header{
+        display: flex;
+        flex-direction: column;
+    }
+}
