--- a/src/components/Layout/SiteTitle.module.css
+++ b/src/components/Layout/SiteTitle.module.css
@@ -28,8 +28,8 @@
 }
 
 .slrclogo {
-  width: 7%;
-  height: 5;
+  width: 5rem;
+  height: 5rem;
   overflow: hidden;
   text-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }
@@ -42,4 +42,13 @@
   position: relative;
   display: inline-block;
   text-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+}
+
+@media (max-width: 608px){
+  .site-title__h1{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+  }
 }
