--- a/src/components/Layout/User/UserSignUpForm.module.css
+++ b/src/components/Layout/User/UserSignUpForm.module.css
@@ -3,6 +3,14 @@
   flex-direction: column;
   border-radius: 10px;
   box-shadow: 0 0 80px 0 rgba(0, 0, 0, 0.25);
+  max-height: 40rem;
+  width: 50rem;
+}
+
+.user_form p{
+  cursor: pointer;
+  color: #fcb900;
+  text-align: center;
 }
 
 .user_form h1 {
@@ -89,6 +97,11 @@
   display: block;
   font-weight: bold;
   margin-bottom: 0.1rem;
+}
+@media (max-width: 700px) {
+  .user_form{ 
+    width: inherit;
+  }
 }
 
 @media (max-width: 525px) {
