--- a/src/components/Layout/User/UserProfile.module.css
+++ b/src/components/Layout/User/UserProfile.module.css
@@ -16,8 +16,8 @@
   flex-direction: column;
   color: #fcb900;
   border-radius: 5px;
-  max-height: 20rem;
-  padding: 0 2rem;
+  max-height: 25rem;
+  padding: 1rem 2rem;
   box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.25);
 }
 
@@ -44,7 +44,7 @@
   padding: 0.5rem 2rem;
   border-radius: 25px;
   max-width: 13rem;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .menu button:hover,
