--- a/src/pages/Reviews/Reviews.module.css
+++ b/src/pages/Reviews/Reviews.module.css
@@ -3,18 +3,32 @@
   margin-top: 2rem;
 }
 
-.reviews h2{
+.reviews h2 {
   padding-top: 1rem;
 }
 
-.reviews > button {
-  font-size: 1.25rem;
+.reviews button {
+  font: inherit;
+  font-size: small;
+  cursor: pointer;
+  background-color: #fcb900;
+  border: none;
+  color: white;
+  padding: 0.25rem 0.5rem;
+  border-radius: 15px;
+  font-weight: bold;
+  max-width: 7rem;
 }
 
-.reviews button{
+.form button:hover,
+.form button:active {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
+.reviews button {
   max-height: 2rem;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
-
 }
 
 .reviews_list {
@@ -22,7 +36,7 @@
   justify-content: space-around;
 }
 
-.reviews section{
-  box-shadow:  0 2px  rgba(0, 0, 0, 0.25);
+.reviews section {
+  box-shadow: 0 2px rgba(0, 0, 0, 0.25);
   padding-bottom: 1rem;
 }
